--- a/src/styles/common/global.scss
+++ b/src/styles/common/global.scss
@@ -215,20 +215,19 @@ main {
  width: 100%;
  transition: .3s ease-in-out;
  color: white;
- overflow: hidden;
  position: relative;
- z-index: 0;
 }
 .variant-1-btn::after {
   content: '';
 	position: absolute;
-	z-index: -1;
-  width: 100%;
-	height: 0;
-	top: 0;
-	left: 0;
+	z-index:-2;
+  top:0;
+  left:50%;
+  right:50%;
+  bottom:0;
+  opacity:0;
 	background-color: white;
-  transition: all 0.4s;
+  transition:0.5s all ease;
 }
 .variant-1-btn:hover,
 .variant-1-btn:active,
@@ -245,7 +244,10 @@ main {
 .variant-1-btn:hover::after,
 .variant-1-btn:active::after,
 .variant-1-btn:focus::after {
-  height: 100%;
+  transition:0.5s all ease;
+  left:0;
+  right:0;
+  opacity:1;
 }
 .variant-2-btn {
   border: 1px solid black;
@@ -260,20 +262,19 @@ main {
   color: black;
   text-align: center;
   position: relative;
-  overflow: hidden;
-  z-index: 0;
  }
 
  .variant-2-btn::after {
   content: '';
 	position: absolute;
-	z-index: -1;
-  width: 100%;
-	height: 0;
-	top: 0;
-	left: 0;
+	z-index:-2;
+  top:0;
+  left:50%;
+  right:50%;
+  bottom:0;
+  opacity:0;
 	background-color: black;
-  transition: all 0.4s;
+  transition:0.5s all ease;
 }
 .variant-2-btn:hover,
 .variant-2-btn:active,
@@ -284,7 +285,10 @@ main {
 .variant-2-btn:hover::after,
 .variant-2-btn:active::after,
 .variant-2-btn:focus::after {
-  height: 100%;
+  transition:0.5s all ease;
+  left:0;
+  right:0;
+  opacity:1;
 }
 
 .variant-2-btn:disabled,
@@ -306,18 +310,17 @@ main {
   color: white;
   text-align: center;
   position: relative;
-  overflow: hidden;
-  z-index: 0;
  }
 
  .variant-3-btn::after {
   content: '';
 	position: absolute;
-	z-index: -1;
-  width: 100%;
-	height: 0;
-	top: 0;
-	left: 0;
+	z-index:-2;
+  top:0;
+  left:50%;
+  right:50%;
+  bottom:0;
+  opacity:0;
 	background-color: white;
   transition: all 0.4s;
 }
@@ -330,7 +333,10 @@ main {
 .variant-3-btn:hover::after,
 .variant-3-btn:active::after,
 .variant-3-btn:focus::after {
-  height: 100%;
+  transition:0.5s all ease;
+  left:0;
+  right:0;
+  opacity:1;
 }
 
 .variant-3-btn:disabled,
