--- a/src/styles/pages/catalog.scss
+++ b/src/styles/pages/catalog.scss
@@ -15,6 +15,12 @@
         }
     }
 
+    &__right {
+        @include media-custom(1440px) {
+            margin-top: 0.5rem;
+        }
+    }
+
     &__pagination {
         color: rgba(255, 255, 255, 0.5);
         gap: 15px;
@@ -49,6 +55,7 @@
     }
 
     &__desktop-top {
+        background-color: black;
         @include media-custom(1440px) {
             display: grid;
             grid-template-columns: repeat(2,1fr);
@@ -56,12 +63,13 @@
             justify-content: space-between;
             max-width: 1420px;
             margin: auto;
-            padding-bottom: 60px;
+            padding-bottom: 40px;
             padding-left: 60px;
         }
 
         @include media-custom(1920px) {
-            max-width: 1890px;
+            max-width: 100%;
+            padding-right: 15px;
         }
     }
 
@@ -176,7 +184,7 @@ line-height: 19px;
         padding: 0;
         margin: 0;
         position: absolute;
-        width: 240px;
+        width: 200px;
         left: -2px;
         top: 38px;
         background-color: white;
@@ -185,16 +193,22 @@ line-height: 19px;
         overflow: hidden;
         transition: .3s ease-in-out;
         font-weight: 700;
-        font-size: 16px;
-        line-height: 19px;
+        font-size: 14px;
+        line-height: 16px;
 text-transform: uppercase;
 color: black;
 z-index: 4;
 text-align: left;
+
+@include media-custom(1440px) {
+    font-size: 16px;
+        line-height: 19px;
+        width: 240px;
+}
     }
 
     &__sort-dropdown-item {
-        padding-top: 5px;
+        padding-top: 8px;
         padding-bottom: 6px;
         padding-left: 20px;
         transition: .3s ease-in-out;
@@ -370,6 +384,13 @@ line-height: 33px;
                     display: block;
                 }
             }
+
+            .catalog-page-card__heart {
+                @include media-custom(1440px) {
+                    opacity: 1;
+                    visibility: visible;
+                }
+            }
         }
     }
 
@@ -385,6 +406,11 @@ line-height: 33px;
     &__heart {
         position: relative;
         z-index: 3;
+        @include media-custom(1440px) {
+            transition: .3s ease-in-out;
+            opacity: 0;
+            visibility: hidden;
+        }
     }
     &__badge-new {
         width: 30px;
@@ -785,7 +811,7 @@ margin-top: auto;
     &__chars-btn {
       background-color: transparent;
       border: 1px solid black;
-      min-width: 108px;
+      min-width: 86px;
       height: 40px;
       display: grid;
       gap: 15px;
@@ -798,6 +824,7 @@ line-height: 16px;
 text-transform: uppercase;
 color: black;
 padding: 0;
+padding: 12px 15px;
 margin: 0;
     }
 
@@ -831,7 +858,7 @@ margin: 0;
         gap: 10px;
         margin-right: 15px;
         padding-right: 8px;
-        max-height: 240px;
+        max-height: 305px;
         overflow: auto;
         scrollbar-color: black;
         scrollbar-width: 5px;
@@ -840,7 +867,8 @@ margin: 0;
         @include media-medium() {
             padding-left: 13px;
             padding-right: 15px;
-            max-height: 370px;
+            max-height: 326px;
+            margin-bottom: 59px;
         }
 
         @include media-custom(1440px) {
@@ -1052,6 +1080,7 @@ transition: .3s ease-in-out;
     display: none;
     gap: 16px;
     grid-auto-rows: max-content;
+    background-color: #101112;
 
     @include media-custom(1440px) {
         display: grid;
@@ -1059,7 +1088,6 @@ transition: .3s ease-in-out;
 
     &__nav {
         display: grid;
-        gap: 25px;
     }
 
     h2 {
@@ -1074,6 +1102,12 @@ max-width: 20ch;
 strong {
     font-weight: 700;
 }
+    }
+    h2.padding--25px {
+        padding: 25px 0;
+    }
+    h2.padding--16px {
+        padding: 16px 0;
     }
 
     &__list {
@@ -1096,7 +1130,8 @@ justify-content: center;
 max-width: 141px;
 text-align: center;
 min-height: 60px;
-transition: .3s ease-in-out
+transition: .3s ease-in-out;
+cursor: pointer;
     }
 
     &__list-item:hover,
