fixed animate-delay collection slider

--- a/src/styles/common/global.scss
+++ b/src/styles/common/global.scss
@@ -84,7 +84,7 @@ select {
 --light-red-color: #CE4949;
 --yellow-color: #FFE600;
 --olive-color:#9B902B;
---animate-delay: 0.5s;
+--animate-delay: .5s;
 }
 
 body {
