--- a/src/styles/pages/my-data.scss
+++ b/src/styles/pages/my-data.scss
@@ -165,7 +165,7 @@ width: 100%;
             font-weight: 300;
 font-size: 14px;
 line-height: 16px;
-color: rgba(0, 0, 0, 0.3);
+color: black;
         }
 
         input::placeholder {
