--- a/src/styles/common/global.scss
+++ b/src/styles/common/global.scss
@@ -173,12 +173,12 @@ body.overflow-hidden {
 	align-items: center;
 }
 .badge {
-  color: black;
+  color: white;
   border-radius: 50%;
   font-weight: 300;
 font-size: 12px;
 line-height: 14px;
-background-color: white;
+background-color: var(--pink-color);
 display: flex;
 align-items: center;
 justify-content: center;
@@ -358,17 +358,39 @@ main {
   text-transform: uppercase;
   text-decoration: none;
   width: 100%;
-  transition: .3s ease-in-out;
+  transition: .4s ease-in-out;
   color: white;
   text-align: center;
+  position: relative;
+  z-index: 0;
  }
 
  .variant-4-btn:hover,
 .variant-4-btn:active,
 .variant-4-btn:focus {
-  color: black;
-  border: 1px solid black;
-  background-color: transparent;
+  border-color: black;
+}
+
+ .variant-4-btn::after {
+  content: '';
+	position: absolute;
+	z-index:-2;
+  top:0;
+  left:50%;
+  right:50%;
+  bottom:0;
+  opacity:0;
+	background-color: black;
+  transition: all 0.4s;
+}
+
+.variant-4-btn:hover::after,
+.variant-4-btn:active::after,
+.variant-4-btn:focus::after {
+  transition:0.5s all ease;
+  left:0;
+  right:0;
+  opacity:1;
 }
 
 [x-cloak] { display: none !important; }
@@ -1179,10 +1201,10 @@ color: white;
   }
 
   &__logo:hover::before {
-    animation: glitch-logo 4s infinite linear alternate-reverse;
+    animation: glitch-logo 2.5s infinite linear alternate-reverse;
   }
   &__logo:hover::after {
-    animation: glitch-logo-2 4s infinite linear alternate-reverse;
+    animation: glitch-logo-2 2.5s infinite linear alternate-reverse;
   }
 
   &__menu {
