--- a/src/styles/pages/current-order.scss
+++ b/src/styles/pages/current-order.scss
@@ -486,6 +486,10 @@ line-height: 19px;
         line-height: 23px;
         color: white;
 
+        span {
+            color: var(--pink-color);
+        }
+
         @include media-medium() {
             font-size: 16px;
         line-height: 19px;
@@ -591,6 +595,7 @@ line-height: 19px;
 font-size: 14px;
 line-height: 16px;
 color: white;
+padding-top: 5px;
     }
 
     &__list {
