--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -2036,34 +2036,12 @@ max-width: 369px;
        color: black;
        position: relative;
        z-index: 0;
-       transition: .3s ease-in-out;
+       transition: .4s ease-in-out;
        text-decoration: none;
        text-transform: uppercase;
        font-weight: 700;
+       border: none;
 
-       &:hover,
-       &:active,
-       &:focus {
-          color: white;
-       }
-
-       &:hover::after,
-       &:active::after,
-       &:focus::after {
-        height: 100%;
-      }
-
-       &::after {
-        content: '';
-          position: absolute;
-          z-index: -1;
-        width: 100%;
-          height: 0;
-          top: 0;
-          left: 0;
-          background-color: black;
-        transition: all 0.4s;
-      }
 
         @include media-custom(1440px) {
             display: flex;
@@ -2515,10 +2493,11 @@ line-height: 23px;
        color: black;
        position: relative;
        z-index: 0;
-       transition: .3s ease-in-out;
+       transition: .4s ease-in-out;
        text-decoration: none;
        text-transform: uppercase;
        font-weight: 700;
+       border: none;
 
 
        @include media-custom(1440px) {
@@ -2530,30 +2509,6 @@ line-height: 23px;
         font-size: 16px;
         line-height: 19px;
        }
-
-       &:hover,
-       &:active,
-       &:focus {
-          color: white;
-       }
-
-       &:hover::after,
-       &:active::after,
-       &:focus::after {
-        height: 100%;
-      }
-
-       &::after {
-        content: '';
-          position: absolute;
-          z-index: -1;
-        width: 100%;
-          height: 0;
-          top: 0;
-          left: 0;
-          background-color: black;
-        transition: all 0.4s;
-      }
     }
 
     &__card-link--small {
