--- a/src/styles/common/global.scss
+++ b/src/styles/common/global.scss
@@ -1099,6 +1099,22 @@ color: white;
     transform: scale(40, 40);
   }
 }
+.pwa-install-btn {
+  display: none;
+  align-items: center;
+  justify-content: center;
+  background-color: white;
+  border: none;
+  color: black;
+  position: fixed;
+  z-index: 99;
+  bottom: 0;
+  width: 100%;
+  height: 40px;
+  font-size: 16px;
+  line-height: 19px;
+  border-radius: 5px;
+}
 // header styles
 .header {
   background-color: black;
