--- a/src/styles/common/global.scss
+++ b/src/styles/common/global.scss
@@ -1099,7 +1099,7 @@ color: white;
     transform: scale(40, 40);
   }
 }
-.pwa-install-btn {
+.pwa-install-toast {
   display: none;
   align-items: center;
   justify-content: center;
@@ -1109,11 +1109,15 @@ color: white;
   position: fixed;
   z-index: 99;
   bottom: 0;
+  margin-bottom: 2rem;
   width: 100%;
   height: 40px;
-  font-size: 16px;
-  line-height: 19px;
+  font-size: 13px;
   border-radius: 5px;
+
+  img {
+    display: inline-block;
+  }
 }
 // header styles
 .header {
