--- a/src/styles/pages/catalog.scss
+++ b/src/styles/pages/catalog.scss
@@ -72,7 +72,7 @@
         }
 
         @include media-custom(1920px) {
-            padding-right: 40px;
+            padding-right: 70px;
         }
     }
 
@@ -107,6 +107,10 @@ margin-right: 10px;
 
         @include media-custom(1440px) {
            display: block;
+        }
+
+        @include media-custom(1920px) {
+            margin-right: 0;
         }
     }
 
@@ -1069,7 +1073,7 @@ transition: .3s ease-in-out;
         gap: 20px;
     }
     @include media-custom(1920px) {
-        padding-right: 30px;
+        padding-right: 70px;
         gap: 69px;
     }
 }
