--- a/src/styles/pages/catalog.scss
+++ b/src/styles/pages/catalog.scss
@@ -324,6 +324,7 @@ line-height: 33px;
 
     @include media-custom(1440px) {
         padding-bottom: 0;
+        padding-top: 0;
     }
 }
 .breadcrumbs__container--catalog-page {
