--- a/src/styles/pages/order-making.scss
+++ b/src/styles/pages/order-making.scss
@@ -1632,6 +1632,12 @@ position: relative;
 }
     }
 
+    &__input-group--time {
+        @include media-medium() {
+            max-width: 180px;
+        }
+    }
+
     &__input-wrapper {
         border-bottom: 1px solid black;
         display: flex;
