--- a/src/styles/pages/contacts.scss
+++ b/src/styles/pages/contacts.scss
@@ -1,25 +1,24 @@
 // contacts page styles
-.contacts-page {
-
-    &__grid {
-        display: grid;
-        gap: 30px;
-        background-color: white;
-        padding: 30px;
-        max-width: 1440px;
-        margin-left: auto;
-        margin-right: auto;
-
-        @include media-custom(1440px) {
-            grid-template-columns: 595px 1fr;
-        }
+.contacts-page-container {
+    --max-width:1440px;
+    @include media-custom-max(767px) {
+        --padding-left:0;
+        --padding-right:0;
     }
+}
+.contacts-page {
+    background-color: white;
+    padding: 20px;
+    display: grid;
+    gap: 30px;
 
-    &__container {
-        @include media-custom(1920px) {
-            --padding-left: 240px;
-            --padding-right: 240px;
-        }
+    @include media-medium() {
+        padding-bottom: 30px;
+    }
+    @include media-custom(1440px) {
+        padding: 40px;
+        padding-bottom: 68px;
+        grid-template-columns: 595px 1fr;
     }
 
     &__left {
@@ -81,5 +80,13 @@ color: black;
             width: 100%;
             height: 100%;
         }
+    }
+}
+
+.contacts-page--dark-theme {
+    background-color: #292929;
+
+    h2,a,p,ul {
+color: white;
     }
 }
